--- a/src/components/CLAGrid/index.scss
+++ b/src/components/CLAGrid/index.scss
@@ -16,7 +16,6 @@
 .row {
   font-size: 16px;
   font-weight: 700;
-  padding: 10px;
 }
 
 .buttonA {
@@ -27,6 +26,15 @@
 .colHours {
   display: flex;
   max-width: 200px;
+}
+
+.colDecoration {
+  border-right: 1px solid #888;
+  margin: 7px 0px 14px 0px;
+}
+
+.colDecoration:last-child {
+  border-right: none;
 }
 
 .teamMembers {
