--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,48 @@
-body {
-  background-color: #fff;
-  min-height: fit-content;
+@import "./theme.scss";
+@import "bootstrap";
+
+:root {
+  --primary: #2e334e;
+  --secondary: #7dd2d3;
+  --cla-primary-dark: #1e2133;
+  --white: #fff;
 }
 
-#root {
-  max-width: 1280px;
-  color: black;
+.App {
+  font-family: museo-sans;
+  flex-direction: column;
+  display: flex;
+  height: 100%;
+  min-width: 320px;
+  min-height: 100vh;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding-right: 0;
+  padding-left: 0;
+  border-left: solid 1px #d8d8d8;
+  border-right: solid 1px #d8d8d8;
 }
 
+.App-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  flex: 1 1;
+  min-width: 680px;;
+}
+
+.cla-logo {
+  width: 35px;
+  height: 35px;
+  margin: 10px 12px 0 59px;
+  float: left;
+}
+
+p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
