--- a/src/components/CLAGrid/index.scss
+++ b/src/components/CLAGrid/index.scss
@@ -4,19 +4,25 @@
 }
 
 .teamContainer {
-  margin: 10px 0 0;
-  padding: 0 20px 20px;
+  --bs-gutter-x: 0rem;
+  margin-bottom: 10px;
 }
 
 .gridHeader {
-  background-color: #e2e4ee;
   padding: 10px;
-  height: 50px;
 }
 
-.row {
+.gridHeaderRow {
+  margin: 0px 0px 10px 0px;
+  background-color: #e2e4ee;
+  padding: 20px;
+}
+
+.gridRow {
   font-size: 16px;
   font-weight: 700;
+  margin: 10px;
+  border-bottom: 1px solid #ddd;
 }
 
 .buttonA {
@@ -30,22 +36,32 @@
 }
 
 .colDecoration {
-  border-right: 1px solid #888;
-  margin: 7px 0px 14px 0px;
+  padding: 8px 0px;
+  margin: 0px 0px 7px 0px;
+  text-align: center;
+  background-color: rgba(226, 228, 238, 0.30);
+
+  .colBorder {
+    border-right: 0.3px solid #ccc;
+    line-height: .8;
+  }
 }
 
 .colDecoration:last-child {
-  border-right: none;
+  .colBorder {
+    border-right: none;
+  }
 }
 
 .teamMembers {
   font-size: 26px;
   font-weight: 700;
   font-family: arial;
-  padding: 10px 20px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   height: 60px;
+  padding: 0px 10px 0px 10px;
 }
 
 .teamMembersTotal {
@@ -58,7 +74,7 @@
   font-size: 14px;
   border: 1px solid #dee2e6;
   border-radius: 5px;
-  padding: 5px 10px;
+  padding: 5px 15px;
   color: #333;
 }
 
@@ -67,18 +83,12 @@
   font-size: 14px;
   cursor: pointer;
   color: #888;
+  margin-right: 20px;
 
-  &.sortToggle {
-    margin: 15px 15px 0 0;
-  }
-
-  &.collapseToggle {
-    margin-top: 15px;
-  }
 }
 
 .searchToggle {
   cursor: pointer;
   font-size: 16px;
-  margin: 16px 16px 0px 0px;
+  margin-right: 20px;
 }
