--- a/src/components/CLAGrid/index.scss
+++ b/src/components/CLAGrid/index.scss
@@ -15,7 +15,7 @@
 .gridHeaderRow {
   margin: 0px 0px 10px 0px;
   background-color: #e2e4ee;
-  padding: 20px;
+  padding: 10px;
 }
 
 .gridRow {
@@ -33,6 +33,7 @@
 .colHours {
   display: flex;
   max-width: 200px;
+  margin-top: 8px;
 }
 
 .colDecoration {
@@ -45,6 +46,12 @@
     border-right: 0.3px solid #ccc;
     line-height: .8;
   }
+}
+
+.colHeadDecoration {
+  padding: 8px 0px;
+  margin: 0px 0px 7px 0px;
+  text-align: center;
 }
 
 .colDecoration:last-child {
@@ -75,6 +82,7 @@
   border: 1px solid #dee2e6;
   border-radius: 5px;
   padding: 5px 15px;
+  margin-bottom: 8px;
   color: #333;
 }
 
@@ -84,11 +92,21 @@
   cursor: pointer;
   color: #888;
   margin-right: 20px;
-
+  user-select: none;
 }
 
 .searchToggle {
   cursor: pointer;
   font-size: 16px;
   margin-right: 20px;
+}
+
+.weekItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.noItems {
+  padding: 15px;
 }
