--- a/src/components/CLAGrid/index.scss
+++ b/src/components/CLAGrid/index.scss
@@ -40,11 +40,11 @@
   padding: 8px 0px;
   margin: 0px 0px 7px 0px;
   text-align: center;
-  background-color: rgba(226, 228, 238, 0.30);
 
   .colBorder {
     border-right: 0.3px solid #ccc;
     line-height: .8;
+    margin-top: 6px;
   }
 }
 
